--- a/templates/conventions/actions/bailleur_notification.html
+++ b/templates/conventions/actions/bailleur_notification.html
@@ -25,7 +25,7 @@
                                 id="{{notificationForm.send_copy.id_for_label}}"
                                 name="{{notificationForm.send_copy.html_name}}"
                                 checked>
-                            <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">envoyez-moi une copie du message envoyé
+                            <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">Envoyez-moi une copie du message envoyé
                             </label>
                         </div>
                         {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
@@ -66,7 +66,7 @@
                             id="{{notificationForm.send_copy.id_for_label}}"
                             name="{{notificationForm.send_copy.html_name}}"
                             checked>
-                        <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">envoyez-moi une copie du message envoyé
+                        <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">Envoyez-moi une copie du message envoyé
                         </label>
                     </div>
                     {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
