--- a/templates/conventions/actions/instructeur_notification.html
+++ b/templates/conventions/actions/instructeur_notification.html
@@ -27,7 +27,7 @@
                             id="{{notificationForm.send_copy.id_for_label}}"
                             name="{{notificationForm.send_copy.html_name}}"
                             checked>
-                        <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">envoyez-moi une copie du message envoyé
+                        <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">Envoyez-moi une copie du message envoyé
                         </label>
                     </div>
                     {% include "common/form/input_textarea.html" with form_input=notificationForm.comment label="Ajouter un commentaire à l'attention de l'instructeur (optionnel)" editable=True %}
