--- a/templates/conventions/actions/bailleur_notification.html
+++ b/templates/conventions/actions/bailleur_notification.html
@@ -1,7 +1,7 @@
 {% load custom_filters %}
 
 {% if convention|display_notification_new_convention_instructeur_to_bailleur:request %}
-    <div class="fr-col-12 fr-py-5w">
+    <div class="fr-col-12 fr-mb-5w fr-mt-3w">
         <div role="alert" class="fr-alert fr-alert--info">
             <h4>Vous avez créé cette convention en lieu et place du bailleur et vous souhaitez sa relecture<h4>
                 <p>Faites en part au bailleur, cette convention passera en statut « En attente de corrections » et
@@ -9,6 +9,7 @@
                 <div>
                     <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}" data-turbo="false">
                         {% csrf_token %}
+                        {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
                         <div class="fr-checkbox-group">
                             <input
                                 type="hidden"
@@ -28,7 +29,6 @@
                             <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">envoyez-moi une copie du message envoyé
                             </label>
                         </div>
-                        {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
                         <button class="fr-btn">
                             Notifier le bailleur
                         </button>
@@ -55,6 +55,7 @@
             <div>
                 <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}" data-turbo="false">
                     {% csrf_token %}
+                    {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
                     <div class="fr-checkbox-group">
                         <input
                             type="hidden"
@@ -69,7 +70,6 @@
                         <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">envoyez-moi une copie du message envoyé
                         </label>
                     </div>
-                    {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
                     {% if convention|display_demande_correction %}
                         <button class="fr-btn">
                             Demander des corrections au bailleur
