--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -1,7 +1,7 @@
 {% load custom_filters %}
 
 {% if convention|display_delete_convention:request %}
-    <div class="fr-col-12 block--row-strech fr-my-5w">
+    <div class="fr-col-12 block--row-strech fr-mb-5w fr-mt-3w">
         <div class="block--row-strech-1 fr-mt-2w">
             <p class="fr-alert__title">
                 Supprimer ce projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}
