--- a/templates/conventions/actions/display_resiliation_info.html
+++ b/templates/conventions/actions/display_resiliation_info.html
@@ -1,5 +1,5 @@
 {% if convention|display_is_resiliated %}
-    <div class="fr-col-md-12 fr-py-5w">
+    <div class="fr-col-md-12 fr-mb-5w fr-mt-3w">
         <div role="alert" class="fr-alert fr-alert--warning">
             <p class="fr-alert__title">La convention a été résiliée le {{ convention.date_resiliation|date:"j F Y" }}</p>
         </div>
