--- a/templates/conventions/actions/generate_convention.html
+++ b/templates/conventions/actions/generate_convention.html
@@ -1,23 +1,27 @@
 {% load custom_filters %}
 
 {% if convention|display_convention_form_progressbar %}
-    <div class="fr-col-12 block--row-strech fr-my-5w">
-        <div class="block--row-strech-1 fr-mr-6w">
-            <p class="fr-alert__title">
-                Télécharger le projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %} (en docx)
-            </p>
+    <div class="fr-col-12 fr-mb-5w fr-mt-3w">
+        <p class="fr-alert__title">
+            Télécharger le projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %} (en docx)
+        </p>
+        <div class="block--row-strech">
             {% if not convention.type1and2_configuration_not_needed and not convention.is_avenant %}
-                <p class="fr-mb-0">
-                    Avant de pouvoir générer un document de convention, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II ci-dessus.</strong>
-                </p>
+                <div class="block--row-strech-1 fr-mr-6w">
+                    <p class="fr-mb-0">
+                        Avant de pouvoir générer un document de convention, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II ci-dessus.</strong>
+                    </p>
+                </div>
                 <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-download-line fr-btn--icon-left" disabled>
                     Télécharger
                 </button>
             {% else %}
-                <p class="fr-mb-0">
-                    Attention, {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %} n’est pas encore validé{% if not convention.is_avenant %}e{% endif %}, ce document est fourni à titre indicatif.
-                    <a class="fr-link" href="https://docs.apilos.beta.gouv.fr/bailleurs-guide/comment-remplir-les-champs/recapitulatif" target="_blank" rel="noopener">En savoir plus</a>
-                </p>
+                <div class="block--row-strech-1 fr-mr-6w">
+                    <p class="fr-mb-0">
+                        Attention, {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %} n’est pas encore validé{% if not convention.is_avenant %}e{% endif %}, ce document est fourni à titre indicatif.
+                        <a class="fr-link" href="https://docs.apilos.beta.gouv.fr/bailleurs-guide/comment-remplir-les-champs/recapitulatif" target="_blank" rel="noopener">En savoir plus</a>
+                    </p>
+                </div>
                 <form method="post" action="{% url 'conventions:generate' convention_uuid=convention.uuid %}" data-turbo="false">
                     {% csrf_token %}
                     <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-download-line fr-btn--icon-left">
