display default html instead of 404 when document doesn't exist

--- a/templates/conventions/preview.html
+++ b/templates/conventions/preview.html
@@ -8,11 +8,8 @@
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
         {% include "common/nav_bar.html" with nav_bar_step="preview" %}
-        <div class="fr-container fr-mb-2w fr-pt-5w">
-            <h2>Visualiser votre {% if convention.is_avenant %}avenant{% else %}convention{% endif %}</h2>
-            <div class="fr-col-md-12 fr-py-5w h-80vh">
-                <iframe src="{% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}{% url 'conventions:display_pdf' convention_uuid=convention.uuid %}" width="100%" height="1000px" nonce="{{request.csp_nonce}}"></iframe>
-            </div>
+        <div class="fr-container fr-my-6w h-80vh">
+            <iframe src="{% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}{% url 'conventions:display_pdf' convention_uuid=convention.uuid %}" width="100%" height="1000px" nonce="{{request.csp_nonce}}"></iframe>
         </div>
     </div>
 {% endblock %}
