fix: remove pen icon

--- a/templates/layout/header_no_cerbere.html
+++ b/templates/layout/header_no_cerbere.html
@@ -19,7 +19,7 @@
                             </li>
                             <a class="fr-btn fr-fi-close-circle-line" href="{% url 'logout' %}"></a>
                         {% else %}
-                            <a class="fr-btn fr-icon-edit-line" href="{% url 'login' %}"></a>
+                            <a class="fr-btn" href="{% url 'login' %}"></a>
                         {% endif %}
                     </div>
                 </div>
