update: add video pusic + img derdiche dor verbatim

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,5 +72,29 @@
             </div>
         </div>
     </div>
+    <div class="fr-container">
+        <div class="fr-grid-row fr-grid-row--gutters">
+            <h2 class="fr-mb-3w">Nos utilisateurs en parlent</h2>
+            <div class="fr-container">
+                <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
+                    <div class="fr-col-lg-6 fr-col-12 fr-pr-4w">
+                        <iframe class="fr-col-12" style="height:300px" type="text/html"  allowfullscreen title="Video Instructeur" src="https://www.dailymotion.com/embed/video/x8f7lru" title="Présentation instructeur" nonce="{{request.csp_nonce}}"> </iframe>
+                        <div class="text--center fr-py-3w fr-px-5w">
+                            <div class="fr-h6 text--center text-title-blue-france">Pour les instructeurs</div>
+                            <p class="text--center"><strong>"Apilos nous aide à prioriser notre travail et à instruire les conventions les plus urgentes"</strong></p>
+                            <div class="text--center"><strong>Philippe Pusic</strong>, Instructeur</div>
+                            <div class="text--center">APM Métropole Bouche du Rhône</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="fr-grid-row fr-grid-row--gutters">
+            <div class=" fr-col-lg-4 fr-col-md-6 fr-col-12">
+                <img src="/static/img/sabrina_derdiche.jpg" class="apilos-verbatim-img">
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
