--- a/templates/index.html
+++ b/templates/index.html
@@ -80,19 +80,24 @@
                     <div class="fr-col-lg-6 fr-col-12 fr-pr-4w">
                         <iframe class="fr-col-12" style="height:300px" type="text/html"  allowfullscreen title="Video Instructeur" src="https://www.dailymotion.com/embed/video/x8f7lru" title="Présentation instructeur" nonce="{{request.csp_nonce}}"> </iframe>
                         <div class="text--center fr-py-3w fr-px-5w">
-                            <div class="fr-h6 text--center text-title-blue-france">Pour les instructeurs</div>
-                            <p class="text--center"><strong>"Apilos nous aide à prioriser notre travail et à instruire les conventions les plus urgentes"</strong></p>
-                            <div class="text--center"><strong>Philippe Pusic</strong>, Instructeur</div>
-                            <div class="text--center">APM Métropole Bouche du Rhône</div>
+                            <div class="fr-h6 text-title-blue-france">Pour les instructeurs</div>
+                            <p><strong>"Apilos nous aide à prioriser notre travail et à instruire les conventions les plus urgentes"</strong></p>
+                            <div><strong>Philippe Pusic</strong>, Instructeur</div>
+                            <div>APM Métropole Bouche du Rhône</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <hr>
-        <div class="fr-grid-row fr-grid-row--gutters">
-            <div class=" fr-col-lg-4 fr-col-md-6 fr-col-12">
-                <img src="/static/img/sabrina_derdiche.jpg" class="apilos-verbatim-img">
+        <div class="fr-container">
+            <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
+                <div class="text--center fr-col-lg-4 fr-col-md-6 fr-col-12">
+                    <img src="/static/img/sabrina_derdiche.jpg" class="apilos-verbatim-img">
+                    <div class="apilos-verbatim-text fr-mb-2w"><strong>"L’outil est intuitif"</strong></div>
+                    <div class="apilos-verbatim-text"><strong>Sabrina DERDICHE</strong>, Instructrice ANRU et Conventionnement APL</div>
+                    <div class="apilos-verbatim-text"><em>DDT 54 Meurthe-et-Moselle</em></div>
+                </div>
             </div>
         </div>
     </div>
