fix: SonarClour bug (alt in image)

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                 <div class="text--center fr-col-lg-4 fr-col-md-6 fr-col-12">
-                    <img src="/static/img/sabrina_derdiche.jpg" class="apilos-verbatim-img">
+                    <img src="/static/img/sabrina_derdiche.jpg" class="apilos-verbatim-img" alt="Sabrina Derdiche">
                     <div class="apilos-verbatim-text fr-mb-2w"><strong>"L’outil est intuitif"</strong></div>
                     <div class="apilos-verbatim-text"><strong>Sabrina DERDICHE</strong>, Instructrice ANRU et Conventionnement APL</div>
                     <div class="apilos-verbatim-text"><em>DDT 54 Meurthe-et-Moselle</em></div>
