update: new link video

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
             <div class="fr-container">
                 <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                     <div class="fr-col-lg-6 fr-col-12 fr-pr-4w">
-                        <iframe class="fr-col-12" style="height:300px" type="text/html"  allowfullscreen title="Video Instructeur" src="https://www.dailymotion.com/embed/video/x8f7lru" title="Présentation instructeur" nonce="{{request.csp_nonce}}"> </iframe>
+                        <iframe class="fr-col-12" style="height:300px" type="text/html"  allowfullscreen title="Video Instructeur" src="https://www.dailymotion.com/embed/video/x8fkp4y" title="Présentation instructeur" nonce="{{request.csp_nonce}}"> </iframe>
                         <div class="text--center fr-py-3w fr-px-5w">
                             <div class="fr-h6 text-title-blue-france">Pour les instructeurs</div>
                             <p><strong>"Apilos nous aide à prioriser notre travail et à instruire les conventions les plus urgentes"</strong></p>
